--- a/home.qmd
+++ b/home.qmd
@@ -8,4 +8,4 @@ Over this time, the role has grown from simple digital marketing to a more compr
 
 This proposal site establishes a timeline of my achievements at the Phipps, a comprehensive list of duties, and a proposal for establishment 
 
-![Caption](headshot.jpg)
+![](headshot.jpg)
